--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -7,8 +7,10 @@
 
 
 
-<div class="maincontainer">
+
     <h2 class="sidrubrik">Felanmälan</h2>
+<div class="maincontainer1">
+
     <br />
     <div class="row">
         <div class="col-md-5 leftdiv">
@@ -70,34 +72,34 @@
                 </div>
                 <br /><div>
 
-    <label>Meddelande:</label>
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-        <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
-    </div>
-                <br />
-    <div class="col-md-10">
-        @Html.CheckBox("CheckNyckel")
-        <label>Markera om vi får gå in med huvudnyckel.</label>
-    </div>
-    <div class="col-md-10">
-        @Html.CheckBox("CheckHund")
-        <label>Markera om ni har hund.</label>
-    </div>
-    <div class="col-md-10">
-        @Html.CheckBox("CheckKatt")
-        <label>Markera om ni har katt.</label>
-    </div>
-    <br />
-     <br />                   
-        <div class="col-md-4">
-            <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
-        </div>
-</div>
+                    <label>Meddelande:</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                        <textarea class="form-control" name="comment" placeholder="Meddelande"></textarea>
+                    </div>
+                    <br />
+                    <div class="col-md-10">
+                        @Html.CheckBox("CheckNyckel")
+                        <label>Markera om vi får gå in med huvudnyckel.</label>
+                    </div>
+                    <div class="col-md-10">
+                        @Html.CheckBox("CheckHund")
+                        <label>Markera om ni har hund.</label>
+                    </div>
+                    <div class="col-md-10">
+                        @Html.CheckBox("CheckKatt")
+                        <label>Markera om ni har katt.</label>
+                    </div>
+                    <br />
+                    <br />
+                    <div class="col-md-4">
+                        <button type="submit" class="btn btn-warning">Skicka <span class="glyphicon glyphicon-send"></span></button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-md-4 rightdiv">
-        <p style="font-size:large;"><b>På hemsidan kan du göra felanmälan dygnet runt.</b></p>
+            <p style="font-size:large;"><b>På hemsidan kan du göra felanmälan dygnet runt.</b></p>
             <h4>
                 <br />Du kan även ringa vårt kontor: 019-16 43 70.
                 <br />
