--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -2,76 +2,75 @@
     ViewBag.Title = "Home Page";
 }
 <link href="~/Content/Csskod.css" rel="stylesheet" />
-<div class="container">
+
    
         <div style=" text-align: center;"><h2 class="sidrubrik">Startsida</h2></div>
-        <br />
-        <br />
 
-        <div class="row">
-            <div class="col-md-5 förstadiven">
-                <h2 style="text-align:center; color:#e95123">För dig som tycker om att bo!</h2>
+<div class="maincontainer1">
+    <div class="row">
+        <div class="col-md-5 förstadiven">
+            <h2 style="text-align:center; color:#e95123">För dig som tycker om att bo!</h2>
 
-                <div class="mainbody">
-                    <div id="myCarousel1" class="carousel slide" data-interval="false">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators">
-                            <li class="item1 active"></li>
-                            <li class="item2"></li>
-                            <li class="item3"></li>
-                            <li class="item4"></li>
-                            <li class="item5"></li>
-                        </ol>
+            <div class="mainbody">
+                <div id="myCarousel1" class="carousel slide" data-interval="false">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li class="item1 active"></li>
+                        <li class="item2"></li>
+                        <li class="item3"></li>
+                        <li class="item4"></li>
+                        <li class="item5"></li>
+                    </ol>
 
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active">
-                                <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
-                            </div>
-
-                            <div class="item">
-                                <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
-                            </div>
-                            <div class="item">
-                                <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
-                            </div>
-                            <div class="item">
-                                <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
-                            </div>
-                            <div class="item">
-                                <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
-                            </div>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
                         </div>
 
-                        <!-- Left and right controls -->
-                        <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                        </a>
-                        <a class="carousel-control right" href="#myCarousel1" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                        </a>
+                        <div class="item">
+                            <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                        </div>
                     </div>
-                </div>
 
-
-            </div>
-            <div class="col-md-6">
-                <h2 style="text-align: left; color:#e95123">Varför ska man hyra av oss?</h2>
-                <div>
-                    <p>Vi har ägande, skötsel och drift i egen regi.</p>
-                    <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
-                    <br />
-                    <br />
-
-                    <p style="font-size:x-large;">
-                        Att hyra din bostad är en grym boendeform som kommer ge dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
-                    </p>
-
+                    <!-- Left and right controls -->
+                    <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="carousel-control right" href="#myCarousel1" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
                 </div>
             </div>
+
 
         </div>
+        <div class="col-md-6">
+            <h2 style="text-align: left; color:#e95123">Varför ska man hyra av oss?</h2>
+            <div>
+                <p>Vi har ägande, skötsel och drift i egen regi.</p>
+                <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
+                <br />
+                <br />
+
+                <p style="font-size:x-large;">
+                    Att hyra din bostad är en grym boendeform som kommer ge dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
+                </p>
+
+            </div>
+        </div>
+
     </div>
+</div>
 
 <script>
     $(document).ready(function () {
