--- a/design/design/Views/Home/Nyheter.cshtml
+++ b/design/design/Views/Home/Nyheter.cshtml
@@ -3,8 +3,9 @@
     ViewBag.Title = "Nyheter";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="maincontainer">
+
     <div style="text-align:center;"><h2 class="sidrubrik">Nyheter</h2></div>
+    <div class="maincontainer1">
     <br />
     <br />
     <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
@@ -12,10 +13,10 @@
         <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
         <p style="text-align:right;">2017-04-12</p>
     </div>
-  <br />
+    <br />
     <div class="nyhet" style="text-align: center; margin-left:5%; margin-right: 5%;">
         <h2>Glad påsk!</h2>
         <p style="text-align:left;">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum <br />Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-        <p style="text-align:right;">2017-04-10</p>    
-     </div>
+        <p style="text-align:right;">2017-04-10</p>
+    </div>
 </div>
