--- a/design/design/Views/Home/omoss.cshtml
+++ b/design/design/Views/Home/omoss.cshtml
@@ -5,11 +5,14 @@
 
 <center>
     <h2>Om oss</h2>
+</center>
+    <div class="maincontainer1">
+        <center>
+        <img class="img-responsive" src="~/Content/Images/omossbild.jpg" alt="">
+</center>
 
-    <img class="img-responsive" src="~/Content/Images/omossbild.jpg" alt=""></center>
 
 
-<div class="container">
     <div class="row">
         <div class="col-sm-4">
             <h3>Studentboende</h3>
