--- a/design/design/Views/Home/Felanmalan.cshtml
+++ b/design/design/Views/Home/Felanmalan.cshtml
@@ -101,7 +101,7 @@
         <div class="col-md-4 rightdiv">
             <p style="font-size:large;"><b>På hemsidan kan du göra felanmälan dygnet runt.</b></p>
             <h4>
-                <br />Du kan även ringa vårt kontor: 019-16 43 70.
+                <br />Du kan även ringa vårt kontor på telefon: 019-16 43 70.
                 <br />
                 <br />Kontorets öppettider:
                 <br />Måndag – Fredag kl: 07:30-16:30.
