--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         <li>@Html.ActionLink("Felanmälan", "Felanmalan", "Home")</li>
                         <li>@Html.ActionLink("Intresseanmälan", "Index", "Home")</li>
                         <li>@Html.ActionLink("Lediga objekt", "About", "Home")</li>
-                        <li>@Html.ActionLink("Våra fastigheter", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Våra fastigheter", "Varafastigheter", "Home")</li>
                         <li>@Html.ActionLink("Frågor och svar", "FragorOchSvar", "Home")</li>
                         <li>@Html.ActionLink("Kontakta oss", "Kontakt", "Home")</li>
                         <li>@Html.ActionLink("Om oss", "omoss", "Home")</li>
