--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         <li>@Html.ActionLink("Startsida", "Index", "Home")</li>
                         <li>@Html.ActionLink("Nyheter", "Nyheter", "Home")</li>
                         <li>@Html.ActionLink("Felanmälan", "Felanmalan", "Home")</li>
-                        <li>@Html.ActionLink("Intresseanmälan", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Intresseanmälan", "Intresseanmalan", "Home")</li>
                         <li>@Html.ActionLink("Lediga objekt", "About", "Home")</li>
                         <li>@Html.ActionLink("Våra fastigheter", "Varafastigheter", "Home")</li>
                         <li>@Html.ActionLink("Frågor och svar", "FragorOchSvar", "Home")</li>
