--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -20,9 +20,16 @@
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Falun</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Almby</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Väster</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Norr</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Centralt</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Studentboende</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Senior 55+</a></li>
                     </ul>
                    </div>
                 </div>
@@ -38,4 +45,131 @@
                 </div>
 
             </div>
+        <legend>3 Fastigheter</legend>
+       
+            <br />
+            <div class="row">
+                <div class="col-sm-4">
+                    <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
+                </div>
+                <div class="col-sm-4">
+                    <p>
+                        <b>Område:</b> Örebro Centralt <br />
+                        <b>Adress:</b> Slottsgatan 7 <br />
+                        <b>Antal lägenheter i fastigheten:</b> 40<br />
+                        <br />
+                        1 Ledig lägenhet i fastigheten<br />
+                        Gå till lediga lägenheter.
+                    </p>
+
+                </div>
+
+                <div class="col-sm-4">
+                    <style>
+                        .google-maps {
+                            position: relative;
+                            padding-bottom: 75%;
+                            //This is the aspect ratio height: 0;
+                            overflow: hidden;
+                        }
+
+                            .google-maps iframe {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100% !important;
+                                height: 100% !important;
+                            }
+                    </style>
+
+                    <div class="google-maps">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-sm-4">
+                        <center><img class="img-responsive" src="~/Content/Images/Brandstationen 6 - 3.jpg" alt=""></center>
+                    </div>
+                    <div class="col-sm-4">
+                        <p>
+                            <b>Område:</b> Örebro Centralt <br />
+                            <b>Adress:</b> Slottsgatan 7 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 40<br />
+                            <br />
+                            1 Ledig lägenhet i fastigheten<br />
+                            Gå till lediga lägenheter.
+                        </p>
+
+                    </div>
+
+                    <div class="col-sm-4">
+                        <style>
+                            .google-maps {
+                                position: relative;
+                                padding-bottom: 75%;
+                                //This is the aspect ratio height: 0;
+                                overflow: hidden;
+                            }
+
+                                .google-maps iframe {
+                                    position: absolute;
+                                    top: 0;
+                                    left: 0;
+                                    width: 100% !important;
+                                    height: 100% !important;
+                                }
+                        </style>
+
+                        <div class="google-maps">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+
+                    </div>
+                </div>
+        <br />
+        <div class="row">
+            <div class="col-sm-4">
+                <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <b>Område:</b> Örebro Centralt <br />
+                    <b>Adress:</b> Slottsgatan 7 <br />
+                    <b>Antal lägenheter i fastigheten:</b> 40<br />
+                    <br />
+                    1 Ledig lägenhet i fastigheten<br />
+                    Gå till lediga lägenheter.
+                </p>
+
+            </div>
+
+            <div class="col-sm-4">
+                <style>
+                    .google-maps {
+                        position: relative;
+                        padding-bottom: 75%;
+                        //This is the aspect ratio height: 0;
+                        overflow: hidden;
+                    }
+
+                        .google-maps iframe {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100% !important;
+                            height: 100% !important;
+                        }
+                </style>
+
+                <div class="google-maps">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d65225.19485646707!2d15.13241503855973!3d59.27805469948709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c017f144aff39%3A0xcfe3b0bad018c93e!2zw5ZyZWJybw!5e0!3m2!1ssv!2sse!4v1492253068164" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+
+            </div>
+        </div>
+
+                </div>
     </div>
+        
