--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -53,10 +53,11 @@
                     <center><img class="img-responsive" src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt=""></center>
                 </div>
                 <div class="col-sm-4">
+                    <br />
                     <p>
-                        <b>Område:</b> Örebro Centralt <br />
-                        <b>Adress:</b> Slottsgatan 7 <br />
-                        <b>Antal lägenheter i fastigheten:</b> 40<br />
+                        <b>Område:</b> Örebro Norr <br />
+                        <b>Adress:</b> Rynningegatan 1-7 <br />
+                        <b>Antal lägenheter i fastigheten:</b> 20<br />
                         <br />
                         1 Ledig lägenhet i fastigheten<br />
                         Gå till lediga lägenheter.
@@ -64,7 +65,7 @@
 
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <style>
                         .google-maps {
                             position: relative;
@@ -88,15 +89,17 @@
                     </div>
                 </div>
                 <br />
+        <hr size="1" color="#996633">
                 <div class="row">
                     <div class="col-sm-4">
                         <center><img class="img-responsive" src="~/Content/Images/Brandstationen 6 - 3.jpg" alt=""></center>
                     </div>
                     <div class="col-sm-4">
-                        <p>
+                       <br />
+                         <p>
                             <b>Område:</b> Örebro Centralt <br />
-                            <b>Adress:</b> Slottsgatan 7 <br />
-                            <b>Antal lägenheter i fastigheten:</b> 40<br />
+                            <b>Adress:</b> Badhusgatan 1-3 <br />
+                            <b>Antal lägenheter i fastigheten:</b> 15<br />
                             <br />
                             1 Ledig lägenhet i fastigheten<br />
                             Gå till lediga lägenheter.
@@ -104,7 +107,7 @@
 
                     </div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                         <style>
                             .google-maps {
                                 position: relative;
@@ -129,11 +132,13 @@
                     </div>
                 </div>
         <br />
+        <hr size="1" color="#996633">
         <div class="row">
             <div class="col-sm-4">
                 <center><img class="img-responsive" src="~/Content/Images/Blaslampan 2 - 1.jpg" alt=""></center>
             </div>
             <div class="col-sm-4">
+                <br />
                 <p>
                     <b>Område:</b> Örebro Centralt <br />
                     <b>Adress:</b> Slottsgatan 7 <br />
@@ -145,7 +150,7 @@
 
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <style>
                     .google-maps {
                         position: relative;
