--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -35,10 +35,19 @@
                 </div>
 
                 <div class="col-sm-3">
-                    <p>
-                        Test<br />
-                        haha testar<br />
-                        haha test<br />
+                    <p>Sök på adress</p>
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                                Adress
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Badhusgatan</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kungsgatan</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Skolgatan</a></li>
+                                
+                            </ul>
+                        </div>
 
 
                     </p>
