--- a/design/design/Views/Home/Varafastigheter.cshtml
+++ b/design/design/Views/Home/Varafastigheter.cshtml
@@ -10,7 +10,9 @@
 
         <div class="row">
             <div class="col-sm-4 divleft">
-                <p>Testar</p>
+                <p>Läs mer om våra fastigheter</p>
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="Studentboende">Studentboende</button><br />
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="Seniorboende 55+">Seniorboende 55+</button><br />
             </div>
             <div class="col-sm-4">
                 <p>Visa fastigheter för:</p>
