--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -12,7 +12,7 @@
                 <p>
                     Org nr 556212-0468
                     <br />Ormestagatan 1B
-                    <br />702 83 Örebrol
+                    <br />702 83 Örebro
                 </p>
                 <style>
                     .google-maps {
