--- a/design/design/Views/Home/Kontakt.cshtml
+++ b/design/design/Views/Home/Kontakt.cshtml
@@ -13,8 +13,9 @@
                     Org nr 556212-0468
                     <br />Ormestagatan 1B
                     <br />702 83 Örebro
+                    <br /><span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank"> Hitta hit</a>
                 </p>
-                <style>
+                @*<style>
                     .google-maps {
                         position: relative;
                         padding-bottom: 75%;
@@ -32,7 +33,7 @@
                 </style>
                 <div class="google-maps">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2039.109769794727!2d15.24361931589036!3d59.26431508163614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465c145150000001%3A0xb770228f3dd33593!2sJohn+Ekstr%C3%B6ms+Bygg+AB!5e0!3m2!1ssv!2sse!4v1492021207736" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
+                </div>*@
             </div>
             <div class="col-sm-4">
                 <h3 class="red">Kontorets Öppettider</h3>
