--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -66,7 +66,8 @@
                                 <br /> Org. nr 556212-0468
                                 <br />Ormestagatan 1B
                                 <br />702 83 Örebro
-                                
+                                <br />
+                                <span class="glyphicon glyphicon-map-marker"></span><a href="https://goo.gl/maps/oeFiqLVaNsv" target="_blank">Hitta hit</a>
                                 </b> 
                             </p>
                          
