börjat på lediga objekt

--- a/design/design/Views/Home/About.cshtml
+++ b/design/design/Views/Home/About.cshtml
@@ -1,7 +1,40 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Lediga objekt";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<center><h2 class="sidrubrik">Lediga objekt</h2></center>
+<div class="maincontainer1">
 
-<p>Use this area to provide additional information.</p>
+    <div class=" row">
+        <div class=" col-lg-4">
+            <label>Sortera</label>
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                    Visa objekt för:
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Alla</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Falun</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Kumla</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Nora</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Almby</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Centralt</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Norr</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Väster</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Studentboende</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Örebro Seniorboende 55+</a></li>
+                </ul>
+            </div>
+           
+       
+        
+        </div>
+        <div class=" col-lg-7">Sökfuntion</div>
+
+    </div>
+    <div class=" ledigt">lediga objekt</div>
+
+
+
+</div>
