--- a/design/design/Views/Home/About.cshtml
+++ b/design/design/Views/Home/About.cshtml
@@ -5,8 +5,10 @@
 <div class="maincontainer1">
 
     <div class=" row">
-        <div class=" col-lg-4">
+       
+        <div class=" col-md-3">
             <label>Sortera</label>
+            <br />
             <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
                     Visa objekt för:
@@ -30,8 +32,62 @@
        
         
         </div>
-        <div class=" col-lg-7">Sökfuntion</div>
-
+        
+        <div class=" col-md-8 filtreraruta-stor">
+            <label>Filtrera</label>
+            <div class="row filtreraruta">
+                <div class=" col-md-2 filtrera filtrera-left" >
+                    <div class="falt">
+                        <label>Minst antal rum</label>
+                        <div style="width: 60px;">
+                            <div class="numberinput">
+                                <input name="state" placeholder="0" class="form-control" type="number">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-md-2 filtrera">
+                    <div class="falt">
+                        <label>Max antal rum</label>
+                        <div style="width: 60px;">
+                            <div class="numberinput">
+                                <input name="state" placeholder="0" class="form-control" type="number">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-md-2 filtrera">
+                    <div class="falt">
+                        <label>Maxhyra</label>
+                        <div style="width: 80px;">
+                            <div class="numberinput">
+                                <input name="state" placeholder="Maxhyra" class="form-control" type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-md-3 filtrera">
+                    <div class="falt">
+                        <label>Adress</label>
+                        <div>
+                            <div class="numberinput">
+                                <input name="state" placeholder="Adress" class="form-control" type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-md-2 filtrera">
+                    <div class="falt">
+                        <label style="color:white;">.</label>
+                        <div>
+                            <div>
+                                <button type="submit" class="btn btn-default" style="margin-left:10px;">Filtrera <span class="glyphicon glyphicon-send"></span></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class=" ledigt">lediga objekt</div>
 
