--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -7,5 +7,38 @@
 
 <div class="maincontainer1">
     <div class="maincontainer">
-</div>
+        <div class="row">
+            <div class="col-md-8">
+                
+            </div>
+            
+            <div class="col-xs-6 col-sm-3">
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
+                    </div>
+
+                    <div class="item">
+                        <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                    </div>
+                    <div class="item">
+                        <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                    </div>
+                </div>
+
+                <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="carousel-control right" href="#myCarousel1" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
