--- a/design/design/Views/Home/studentboende.cshtml
+++ b/design/design/Views/Home/studentboende.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "studentboende";
 }
 
-<h2>studentboende</h2>
+<center><h2>Studentboende</h2></center>
 
 <div class="maincontainer1">
     <div class="maincontainer">
@@ -13,32 +13,72 @@
             </div>
             
             <div class="col-xs-6 col-sm-3">
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="~/Content/Images/Blaslampan%202%20-%203.jpg" alt="Chania">
+                <div id="myCarousel1" class="carousel slide" data-interval="false">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li class="item1 active"></li>
+                        <li class="item2"></li>
+                        <li class="item3"></li>
+                        <li class="item4"></li>
+                        <li class="item5"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt="Chania">
+                        </div>
+
+                        <div class="item">
+                            <img src="~/Content/Images/Jarnvagsgatan 26 A.jpg" alt="Chania">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
+                        </div>
+                        <div class="item">
+                            <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
+                        </div>
                     </div>
 
-                    <div class="item">
-                        <img src="~/Content/Images/Brandstationen%206%20-%203.jpg" alt="Chania">
-                    </div>
-                    <div class="item">
-                        <img src="~/Content/Images/Fetknoppen%202%20-%202.jpg" alt="Flower">
-                    </div>
-                    <div class="item">
-                        <img src="~/Content/Images/Krakan%209%20-%201.jpg" alt="Flower">
-                    </div>
-                    <div class="item">
-                        <img src="~/Content/Images/Liljan%209%20-%201.jpg" alt="Flower">
-                    </div>
+                    <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="carousel-control right" href="#myCarousel1" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
                 </div>
-
-                <a class="carousel-control left" href="#myCarousel1" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="carousel-control right" href="#myCarousel1" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        // Activate Carousel
+        $("#myCarousel1").carousel({ interval: false });
+
+        // Enable Carousel Indicators
+        $(".item1").click(function () {
+            $("#myCarousel1").carousel(0);
+        });
+        $(".item2").click(function () {
+            $("#myCarousel1").carousel(1);
+        });
+        $(".item3").click(function () {
+            $("#myCarousel1").carousel(2);
+        });
+        $(".item4").click(function () {
+            $("#myCarousel1").carousel(3);
+        });
+        $(".item5").click(function () {
+            $("#myCarousel1").carousel(4);
+        });
+
+        // Enable Carousel Controls
+        $(".left").click(function () {
+            $("#myCarousel1").carousel("prev");
+        });
+        $(".right").click(function () {
+            $("#myCarousel1").carousel("next");
+        });
+    });
+</script>
