--- a/design/design/Views/Shared/_Layout.cshtml
+++ b/design/design/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <li>@Html.ActionLink("Nyheter", "Nyheter", "Home")</li>
                         <li>@Html.ActionLink("Felanmälan", "Felanmalan", "Home")</li>
                         <li>@Html.ActionLink("Intresseanmälan", "Intresseanmalan", "Home")</li>
-                        <li>@Html.ActionLink("Lediga objekt", "About", "Home")</li>
+                        <li>@Html.ActionLink("Lediga objekt", "LedigaObjekt", "Home")</li>
                         <li>@Html.ActionLink("Våra fastigheter", "Varafastigheter", "Home")</li>
                         <li>@Html.ActionLink("Frågor och svar", "FragorOchSvar", "Home")</li>
                         <li>@Html.ActionLink("Kontakta oss", "Kontakt", "Home")</li>
