--- a/design/design/Views/Home/Index.cshtml
+++ b/design/design/Views/Home/Index.cshtml
@@ -1,17 +1,40 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+
+<div id="fb-root"></div>
+<script>
+(function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v2.8";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <link href="~/Content/Csskod.css" rel="stylesheet" />
 
    
         <div style=" text-align: center;"><h2 class="sidrubrik">Startsida</h2></div>
 
 <div class="maincontainer1">
-    <div class="row">
-        <div class="col-md-5 förstadiven">
-            <h2 style="text-align:center; color:#e95123">För dig som tycker om att bo!</h2>
+    <div class="col-lg-12">
+        <p style="font-size:x-large; text-align:center;">
+            Att hyra din bostad är en grym boendeform som kommer ge dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
+        </p>
 
-            <div class="mainbody">
+    </div>
+    <div class="row">
+        <div class="col-md-6 förstadiven">
+            <div class="col-md-12">
+    <h2 style="text-align: left; color:#e95123">Varför ska man hyra av oss?</h2>
+    <div>
+        <p>Vi har ägande, skötsel och drift i egen regi.</p>
+        <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
+        <br />
+        <br />
+    </div>
+</div>
+            <div class="col-md-12 mainbody" >
                 <div id="myCarousel1" class="carousel slide" data-interval="false">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -52,25 +75,24 @@
                 </div>
             </div>
 
-
-        </div>
-        <div class="col-md-6">
-            <h2 style="text-align: left; color:#e95123">Varför ska man hyra av oss?</h2>
-            <div>
-                <p>Vi har ägande, skötsel och drift i egen regi.</p>
-                <p>Vi har lång erfarenhet av hyresfastigheter och hyresgäster.</p>
-                <br />
-                <br />
-
-                <p style="font-size:x-large;">
-                    Att hyra din bostad är en grym boendeform som kommer ge dig <span style="color:#e95123">trygghet</span>, <span style="color:#e95123">frihet</span> och <span style="color:#e95123">service</span>!
-                </p>
-
+            <h2 style="text-align:center; color:#e95123">För folk som tycker om att bo!</h2>
+              
             </div>
+        <div class="col-md-4 facebook">
+            <p>
+                Genom att gilla var Facebooksida kan du hålla dig uppdaterad om vad som händer hos oss på John Ekströms Bygg AB.
+                <br />Lediga objekt och information till våra hyresgäster läggs ut på vår Facebooksida.
+            </p>
+            <div class="fb-page" data-height="350" data-href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/John-Ekstr%C3%B6ms-Bygg-AB-1430670663830254/">John Ekströms Bygg AB</a></blockquote></div>
         </div>
-
+        </div>
+   
+  
     </div>
-</div>
+ 
+ 
+@*</div>
+</div>*@
 
 <script>
     $(document).ready(function () {
